--- a/src/app/Components/WhatWeDo/NewWhatWeDo.module.css
+++ b/src/app/Components/WhatWeDo/NewWhatWeDo.module.css
@@ -871,83 +871,65 @@
       padding: 3rem 0 3rem;
       min-height: auto;
     }
-    
     .container {
       max-width: 100%;
       padding: 0 1rem;
     }
-    
     .headerSection {
-      margin-bottom: 3rem;
+      margin-bottom: 0rem;
     }
-    
-    .headingWrapper {
-      margin-bottom: 1.5rem;
-    }
-    
     .mainHeading {
       font-size: 2rem;
+      line-height: normal;
+      letter-spacing: 0px;
     }
-    
+    .subHeading {
+      font-size: 1rem;
+      line-height: 1.5;
+      letter-spacing: 0px;
+    }
     .mainHeading::first-letter {
       font-size: 3rem;
     }
-    
     .progressLine {
       height: 2px;
       bottom: -8px;
     }
-    
-    .subHeading {
-      font-size: 1rem;
-      max-width: 100%;
-      line-height: 1.6;
-      padding: 0 0.5rem;
-    }
-    
     .categoryCardsContainer {
       grid-template-columns: 1fr;
       gap: 1rem;
-      margin: 2rem 0;
+      margin: 0;
       padding: 0;
     }
-    
     .categoryCard {
-      padding: 1.25rem;
+      padding: 0rem 0rem 0rem 0rem;
     }
-    
     .cardContent {
       gap: 1rem;
+      padding-right: 1rem;
     }
-    
     .categoryIcon {
       width: 45px;
       height: 45px;
       border-radius: 10px;
     }
-    
     .categoryIcon i {
       font-size: 1.1rem;
     }
-    
     .cardHeading {
       font-size: 1.2rem;
       margin-bottom: 0.5rem;
     }
-    
     .cardDescription {
       font-size: 0.9rem;
       line-height: 1.5;
     }
-    
     .buttonContainer {
       display: grid;
       grid-template-columns: 1fr 1fr;
       align-items: center;
       gap: 0;
-      margin-top: 2rem;
     }
-    
     .buttonContainer button {
       width: 100%;
       max-width: 280px;
