--- a/src/app/services/income-tax/StartupHero.module.css
+++ b/src/app/services/income-tax/StartupHero.module.css
@@ -271,56 +271,47 @@
   }
 }
 
-/* Mobile devices (phones) */
-@media (max-width: 767px) {
-  .heroSection {
-    height: fit-content;
-    padding: 5rem 1rem 0
-  }
+/* Laptop and larger devices */
+@media (min-width: 1025px) {
   .container {
-    flex-direction: column;
-    padding: 1rem 0.5rem;
+    flex-direction: row;
+    padding: 4rem 2rem;
   }
-  .left, .right {
-    flex: unset;
-    width: 100%;
-    min-width: unset;
-    justify-content: center;
+  .left {
+    flex: 1;
+    min-width: 400px;
   }
+  
   .right {
-    margin-top: 2rem;
-    padding-top: 40px;
-    min-width: unset;
-    padding: 2rem 0 2rem;
+    flex: 1;
+    min-width: 400px;
+    padding-top: 100px;
+    margin-top: 0;
   }
   .cardStack {
-    width: 100vw;
-    max-width: 300px;
-    height: 220px;
+    width: 370px;
+    height: 420px;
   }
   .cardWrapper {
-    width: 180px;
-    height: 90px;
+    width: 320px;
+    height: 200px;
   }
-.heading {
-  letter-spacing: .1px;
-}
-
   .heading, .coloredreg {
-    font-size: 2.5rem;
+    font-size: 4rem;
   }
   .colored {
-    font-size: 2.5rem;
+    font-size: 6rem;
   }
   .description {
-    font-size: 1rem;
-    max-width: 95vw;
+    font-size: 1.25rem;
+    max-width: 900px;
   }
   .leftContentWrapper {
-    min-width: unset;
-    padding-right: 0;
+    min-width: 800px;
+    padding-right: 20px;
   }
-}
+} 
+
 
 /* Tablet devices */
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -364,42 +355,54 @@
   }
 }
 
-/* Laptop and larger devices */
-@media (min-width: 1025px) {
-  .container {
-    flex-direction: row;
-    padding: 4rem 2rem;
+
+/* Mobile devices (phones) */
+@media (max-width: 767px) {
+  .heroSection {
+    height: fit-content;
+    padding: 5rem 1rem 0
   }
-  .left {
-    flex: 1;
-    min-width: 400px;
+  .container {
+    flex-direction: column;
+    padding: 1rem 0.5rem;
+  }
+  .left, .right {
+    flex: unset;
+    width: 100%;
+    min-width: unset;
+    justify-content: center;
   }
   .right {
-    flex: 1;
-    min-width: 400px;
-    padding-top: 100px;
-    margin-top: 0;
+    margin-top: 2rem;
+    padding-top: 40px;
+    min-width: unset;
+    padding: 2rem 0 2rem;
   }
   .cardStack {
-    width: 370px;
-    height: 420px;
+    width: 100vw;
+    max-width: 300px;
+    height: 220px;
   }
   .cardWrapper {
-    width: 320px;
-    height: 200px;
+    width: 180px;
+    height: 90px;
+  }
+  .heading {
+    letter-spacing: .1px;
   }
   .heading, .coloredreg {
-    font-size: 4rem;
+    font-size: 2rem;
   }
   .colored {
-    font-size: 6rem;
+    font-size: 2.5rem;
   }
   .description {
-    font-size: 1.25rem;
-    max-width: 900px;
+    font-size: 1rem;
+    line-height: 1.4;
+    max-width: 95vw;
   }
   .leftContentWrapper {
-    min-width: 800px;
-    padding-right: 20px;
+    min-width: unset;
+    padding-right: 0;
   }
-} 
+}
