--- a/src/app/Components/CompanyLogos/CompanyLogos.module.css
+++ b/src/app/Components/CompanyLogos/CompanyLogos.module.css
@@ -142,21 +142,6 @@
   justify-content: center;
 }
 
-/* Tablet devices */
-@media (min-width: 768px) and (max-width: 1024px) {
-  .mainHeading {
-    font-size: 2rem;
-  }
-  .logosGrid {
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2rem;
-  }
-  .logoItem {
-    width: 120px;
-    height: 60px;
-  }
-}
-
 /* Laptop and larger devices */
 @media (min-width: 1025px) {
   .mainHeading {
@@ -172,16 +157,54 @@
   }
 }
 
+/* Tablet devices */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .container{
+    padding: 0;
+  }
+  .mainHeading {
+    font-size: 2.8rem;
+    width: 500px;
+    line-height: 1.4;
+  }
+  .mainHeading::first-letter{
+    font-size: 4rem;
+  }
+  .headingWrapper{
+    margin-bottom: 0;
+  }
+  .companyLogosVideo{
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+    height: 35vh;
+    width: 100vw;
+    object-fit: cover;
+    object-position: bottom center;
+  }
+  .logosGrid {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
+  .logoItem {
+    width: 120px;
+    height: 60px;
+  }
+}
 
 /* Mobile devices (phones) */
 @media (max-width: 767px) {
   .companyLogosSection{
     padding: 1rem 0 2rem;
   }
+  .container{
+    padding: 0;
+  }
   .mainHeading {
     font-size: 2rem;
     line-height: normal;
     letter-spacing: 0px;
+    max-width: 300px;
   }
 
   .headingWrapper {
@@ -201,8 +224,12 @@
     height: 50px;
   }
   .companyLogosVideo {
-    border: 2.4px solid #111827;
-    border-radius: 10px;
-    box-shadow: rgba(50, 50, 93, 0.15) 0px 13px 27px -5px, rgba(0, 0, 0, 0.2) 0px 8px 16px -8px;
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+    height: 20vh;
+    width: 100vw;
+    object-fit: cover;
+    object-position: bottom center;
   }
 }
