--- a/src/app/Components/FeaturesSection/FeaturesSection.module.css
+++ b/src/app/Components/FeaturesSection/FeaturesSection.module.css
@@ -242,8 +242,8 @@
 /* Tablet devices */
 @media (min-width: 768px) and (max-width: 1024px) {
   .featuresSection {
-    padding-top: 4rem;
-    padding-bottom: 4rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     min-height: auto;
   }
   
@@ -254,15 +254,17 @@
   }
   
   .headerSection {
-    margin-bottom: 6rem;
+    margin-bottom: 2.5rem;
   }
   
   .mainHeading {
-    font-size: 3.2rem;
+    font-size: 2.8rem;
+    max-width: 500px;
+    line-height: 1.4;
   }
   
   .mainHeading::first-letter {
-    font-size: 4.5rem;
+    font-size: 4rem;
   }
   
   .subHeading {
@@ -272,12 +274,13 @@
   }
   
   .grid {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1.5rem;
+    grid-template-columns: 1fr;
+    gap: 2rem;
   }
   
   .card {
     padding: 1.5rem;
+    transform: translate(0px, 0px) !important;
   }
   
   .cardTitle {
