--- a/src/app/Components/NewContactForm/ModernContactForm.module.css
+++ b/src/app/Components/NewContactForm/ModernContactForm.module.css
@@ -390,35 +390,6 @@ textarea.input::-webkit-scrollbar {
 }
 
 
-
-/* Tablet devices */
-@media (min-width: 768px) and (max-width: 1024px) {
-  .wrapper {
-    padding: 0 10px;
-  }
-  .cardRow {
-    flex-direction: row;
-    gap: 2rem;
-    justify-content: center;
-    align-items: stretch;
-  }
-  .formCard, .thankCard {
-    min-width: 340px;
-    max-width: 420px;
-    width: 100%;
-    min-height: 100%;
-    flex: 1 1 0;
-    display: flex;
-    flex-direction: column;
-  }
-  .thankContent {
-    display: flex;
-    align-items: flex-start;
-    width: 100%;
-    flex: 1 1 0;
-  }
-}
-
 /* Laptop and larger devices */
 @media (min-width: 1025px) {
   .cardRow {
@@ -447,6 +418,35 @@ textarea.input::-webkit-scrollbar {
   .wrapper {
     padding-top: 100px;
     padding-bottom: 100px;
+  }
+}
+
+/* Tablet devices */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .wrapper{
+    min-height: fit-content;
+    padding: 3rem 1rem;
+  }
+  .cardRow {
+    flex-direction: row;
+    gap: 2rem;
+    justify-content: center;
+    align-items: stretch;
+  }
+  .formCard, .thankCard {
+    min-width: 340px;
+    max-width: 420px;
+    width: 100%;
+    min-height: 100%;
+    flex: 1 1 0;
+    display: flex;
+    flex-direction: column;
+  }
+  .thankContent {
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+    flex: 1 1 0;
   }
 }
 
