--- a/src/app/Components/TitleBlend/titleblend.module.css
+++ b/src/app/Components/TitleBlend/titleblend.module.css
@@ -90,19 +90,22 @@
   }
   
   .welcomeTo {
-    font-size: 2rem;
+    font-size: 1.8em;
     margin-left: 0.5rem;
+    letter-spacing: 0.01rem;
   }
   
   .titleDelfyle {
-    font-size: 8rem;
-    margin-top: 1rem;
+    font-size: 7rem;
+    margin-top: 0.2rem;
     margin-bottom: 2rem;
+    letter-spacing: 0.01rem;
   }
   
   .subTitle {
-    font-size: 2.8rem;
+    font-size: 2.4rem;
     margin-left: 0.5rem;
+    letter-spacing: 0.01rem;
   }
 }
 
