--- a/src/app/Components/WhoWeWorkWith/WhoWeWorkWith.module.css
+++ b/src/app/Components/WhoWeWorkWith/WhoWeWorkWith.module.css
@@ -241,14 +241,24 @@
 
 /* Tablet devices */
 @media (min-width: 768px) and (max-width: 1024px) {
+  .header{
+   margin-bottom: 1rem; 
+  }
   .section {
     padding: 2rem 0;
   }
   .heading {
-    font-size: 2.5rem;
+    font-size: 2.8rem;
+  }
+  .heading::first-letter{
+    font-size: 4rem;
+  }
+  .bottomText{
+    max-width: 700px;
   }
   .categoriesContainer {
     gap: 1.5rem;
+    margin-bottom: 0;
   }
   .categoryCard {
     padding: 1.5rem;
