--- a/src/app/services/startup/StartupHero.module.css
+++ b/src/app/services/startup/StartupHero.module.css
@@ -178,99 +178,6 @@
   z-index: 1;
 }
 
-/* Mobile devices (phones) */
-@media (max-width: 767px) {
-  .heroSection {
-    height: fit-content;
-    padding: 5rem 1rem 0
-  }
-  .container {
-    flex-direction: column;
-    padding: 1rem 0.5rem;
-  }
-  .left, .right {
-    flex: unset;
-    width: 100%;
-    min-width: unset;
-    justify-content: center;
-  }
-  .right {
-    margin-top: 2rem;
-    padding-top: 40px;
-    min-width: unset;
-    padding: 2rem 1rem 2rem;
-  }
-  .cardStack {
-    width: 100vw;
-    max-width: 300px;
-    height: 220px;
-  }
-  .cardWrapper {
-    width: 180px;
-    height: 90px;
-  }
-.heading {
-  letter-spacing: .1px;
-}
-
-  .heading, .coloredreg {
-    font-size: 2.5rem;
-  }
-  .colored {
-    font-size: 2.5rem;
-  }
-  .description {
-    font-size: 1rem;
-    max-width: 95vw;
-  }
-  .leftContentWrapper {
-    min-width: unset;
-    padding-right: 0;
-  }
-}
-
-/* Tablet devices */
-@media (min-width: 768px) and (max-width: 1024px) {
-  .container {
-    flex-direction: column;
-    padding: 2rem 1rem;
-  }
-  .left, .right {
-    flex: unset;
-    width: 100%;
-    min-width: unset;
-    justify-content: center;
-  }
-  .right {
-    margin-top: 2rem;
-    padding-top: 60px;
-    min-width: unset;
-  }
-  .cardStack {
-    width: 100vw;
-    max-width: 350px;
-    height: 320px;
-  }
-  .cardWrapper {
-    width: 220px;
-    height: 120px;
-  }
-  .heading, .coloredreg {
-    font-size: 2.5rem;
-  }
-  .colored {
-    font-size: 3.5rem;
-  }
-  .description {
-    font-size: 1.1rem;
-    max-width: 90vw;
-  }
-  .leftContentWrapper {
-    min-width: unset;
-    padding-right: 0;
-  }
-}
-
 /* Laptop and larger devices */
 @media (min-width: 1025px) {
   .container {
@@ -281,7 +188,6 @@
     flex: 1;
     min-width: 400px;
   }
-  
   .right {
     flex: 1;
     min-width: 400px;
@@ -310,14 +216,33 @@
     min-width: 800px;
     padding-right: 20px;
   }
-} 
-
+}
 
 /* Tablet devices */
 @media (min-width: 768px) and (max-width: 1024px) {
+  .leftContentWrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .heading, .description{
+    text-align: center;
+  }
+  .cta{
+    margin: 0 auto;
+  }
+  .descWrapper{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1.5rem;
+  }
+  .heroSection{
+    height: fit-content;
+  }
   .container {
     flex-direction: column;
-    padding: 2rem 1rem;
+    padding: 6rem 1rem;
+    padding-top: 8rem;
   }
   .left, .right {
     flex: unset;
@@ -326,7 +251,6 @@
     justify-content: center;
   }
   .right {
-    margin-top: 2rem;
     padding-top: 60px;
     min-width: unset;
   }
@@ -359,7 +283,7 @@
 @media (max-width: 767px) {
   .heroSection {
     height: fit-content;
-    padding: 5rem 1rem 0
+    padding: 5rem 1rem 0;
   }
   .container {
     flex-direction: column;
@@ -375,7 +299,7 @@
     margin-top: 2rem;
     padding-top: 40px;
     min-width: unset;
-    padding: 2rem 0 2rem;
+    padding: 2rem 0 2rem; /* latest applied */
   }
   .cardStack {
     width: 100vw;
@@ -390,14 +314,14 @@
     letter-spacing: .1px;
   }
   .heading, .coloredreg {
-    font-size: 2rem;
+    font-size: 2rem; /* latest applied */
   }
   .colored {
     font-size: 2.5rem;
   }
   .description {
     font-size: 1rem;
-    line-height: 1.4;
+    line-height: 1.4; /* latest applied */
     max-width: 95vw;
   }
   .leftContentWrapper {
