--- a/src/app/Components/SocialLinks/SocialLinks.module.css
+++ b/src/app/Components/SocialLinks/SocialLinks.module.css
@@ -316,19 +316,27 @@
 
 /* Tablet devices */
 @media (min-width: 768px) and (max-width: 1024px) {
+  .headerSection{
+    margin-bottom: 0;
+  }
   .mainHeading {
-    font-size: 2rem;
+    font-size: 2.75rem;
+    padding: 0 1rem;
+  }
+  .mainHeading::first-letter{
+    font-size: 4rem;
   }
   .cardsContainer {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     gap: 1.5rem;
   }
   .socialCard {
     padding: 1.25rem;
   }
   .iconWrapper {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
+    margin-bottom: 10px;
   }
   .icon {
     font-size: 1.8rem;
